# develop

./: .gitignore  Makefile  check_db.py  docker-compose.yml
apps/ironRep/apps/backend/: .dockerignore  .gitignore  README.md  alembic.ini  purge_rag.py  pyproject.toml  test_llm.py  verify_llm_fix.py
apps/ironRep/apps/backend/alembic/: env.py
apps/ironRep/apps/backend/alembic/versions/: 001_add_users_table.py  002_add_biometrics_table.py  003_add_exercises_table.py  004_add_chat_history_table.py  005_add_workout_plans_table.py  006_add_exercise_preferences.py  007_rename_sciatica_to_injury_profile.py  008_add_weekly_plans_tables.py  009_add_extended_user_profile_fields.py  010_add_google_accounts.py  011_add_manual_macro_targets.py  012_remove_food_cache_favorites_fatsecret_id.py  013_merge_heads.py  20251128_wizard_sessions.py
apps/ironRep/apps/backend/scripts/: download_openfoodfacts.py  ingest_usda_to_chroma.py  knowledge_base_manager.py  populate_rag_full.py
apps/ironRep/apps/backend/src/: __init__.py
apps/ironRep/apps/backend/src/application/: __init__.py
apps/ironRep/apps/backend/src/application/dtos/: biometrics_dtos.py  chat_dtos.py  dtos.py  medical_dtos.py  user_dtos.py  workout_dtos.py
apps/ironRep/apps/backend/src/application/services/: agent_orchestrator.py  ai_parsing_service.py  workout_template_service.py
apps/ironRep/apps/backend/src/application/use_cases/: ask_medical.py  ask_nutritionist.py  ask_workout_coach.py  checkin_conversational.py  generate_diet.py  generate_workout.py  onboarding.py  record_biometric.py  weekly_review.py
apps/ironRep/apps/backend/src/domain/entities/: __init__.py  biometric.py  food.py  medical.py  nutrition.py  pain_assessment.py  progress_kpi.py  user.py  user_profile.py  workout_session.py
apps/ironRep/apps/backend/src/domain/repositories/: biometric_repository.py  chat_repository.py  food_repository.py  kpi_repository.py  nutrition_repository.py  pain_repository.py  user_repository.py  workout_repository.py
apps/ironRep/apps/backend/src/domain/services/: nutrition_calculator_service.py  pain_analyzer.py  progression_engine.py  red_flags_checker.py
apps/ironRep/apps/backend/src/domain/value_objects/: __init__.py  nutrition.py  user.py
apps/ironRep/apps/backend/src/infrastructure/ai/: __init__.py  google_embeddings.py  langgraph_orchestrator.py  llm_service.py  ollama_client.py  rag_service.py  streaming_service.py  user_context_rag.py
apps/ironRep/apps/backend/src/infrastructure/config/: dependencies.py  settings.py
apps/ironRep/apps/backend/src/infrastructure/logging/: __init__.py  logger.py
apps/ironRep/apps/backend/src/infrastructure/persistence/: database.py  food_models.py  models.py  nutrition_models.py
apps/ironRep/apps/backend/src/infrastructure/security/: deps.py  security.py
apps/ironRep/apps/backend/src/interfaces/api/: main.py
apps/markettina/apps/: README.md  pyproject.toml
apps/markettina/apps/backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/markettina/apps/backend/alembic/: env.py
apps/markettina/apps/backend/alembic/versions/: 001_initial_studiocentos_schema.py  002_add_admin_tables.py  004_add_cover_image_to_projects.py  005_add_admin_settings.py  007_customers_domain.py  008_quotes_domain.py  010_scheduled_posts_editorial_calendar.py  011_google_integration_settings.py  012_update_services_ai_focus.py  014_toolai_posts.py  015_brand_settings.py  017_identity_billing_context.py  018_analytics_advanced.py  019_workflow_persistence.py  020_v3_token_economy_billing.py  add_google_user_id_to_admin_settings.py
apps/markettina/apps/backend/app/: main.py  main_simple.py
apps/markettina/apps/backend/app/core/: __init__.py  api_key_rotation.py  brute_force_protection.py  cache_endpoints.py  config.py  exceptions.py  metrics_endpoints.py  monitoring_endpoints.py  rate_limiting.py  security.py  session_security.py
apps/markettina/apps/backend/app/core/compliance/: gdpr.py  pci_dss.py
apps/markettina/apps/backend/app/core/constants/: __init__.py  api_constants.py  (+3 more)
apps/markettina/apps/backend/app/infrastructure/: startup.py
apps/markettina/apps/backend/app/integrations/: google_meet.py  instagram_insights.py  linkedin_publishing.py  seo_tools.py  social_media.py  zoom.py
apps/markettina/apps/backend/app/jobs/: __init__.py  daily_automation.py
apps/markettina/apps/backend/app/schemas/: admin.py
apps/markettina/apps/backend/app/scripts/: run_daily_automation.py  seed_data.py  seed_raw.py
apps/markettina/apps/backend/app/services/: ai_feedback_loop.py  calendar_service.py  email_service.py  multi_agent_orchestrator.py  notification_service.py  veo_video_service.py
apps/markettina/apps/backend/scripts/: create_admin_user.py  demo_calendario_auto.py  demo_instagram_post.py  demo_post_api.py  demo_social_posting.py  post_brandizzato.py  seed_portfolio.py
apps/markettina/apps/backend/tests/: test_oauth_tokens.py
apps/markettina/apps/frontend/: Dockerfile  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
apps/markettina/apps/frontend/e2e/: admin.spec.ts  customer.spec.ts  landing.spec.ts
apps/markettina/apps/frontend/public/: robots.txt  site.webmanifest  sitemap.xml
apps/markettina/apps/frontend/public/backup_logos/: LogoNeWhitw.png.legacy  logo.png.legacy
apps/markettina/apps/frontend/src/: App.tsx  main.tsx
apps/studiocentos/apps/ai_microservice/: .env.example  README.md  pyproject.toml
apps/studiocentos/apps/ai_microservice/app/: __init__.py  main.py
apps/studiocentos/apps/ai_microservice/app/core/: config.py  logging.py  security.py
apps/studiocentos/apps/ai_microservice/app/domain/: brand_context.py
apps/studiocentos/apps/ai_microservice/scripts/: apply_regenerated_branding.py  brand_image.py  generate_launch_campaign.py  generate_massive_dataset.py  organize_campaign_images.py  populate_prompts_library.py  populate_rag.py  quick_test_model.py  regenerate_via_agents.py  test_model_standalone.py  test_studiocentos_model.py  upload_to_huggingface.py
(+1592 files in other folders)
