# ============================================================================
# APPS WORKSPACE - MARKETTINA Enterprise
# ============================================================================
# Workspace root per gestione unificata dipendenze con UV
# AI Marketing Automation Platform

[project]
name = "markettina-apps"
version = "2.0.0"
description = "MARKETTINA - AI Marketing Automation Platform Workspace"
authors = [{name = "MARKETTINA Team", email = "info@markettina.it"}]
readme = "README.md"
requires-python = ">=3.12"

# ============================================================================
# UV WORKSPACE CONFIGURATION
# ============================================================================
[tool.uv.workspace]
members = [
    "ai_microservice",
    "backend",
]

# Exclude frontend (usa pnpm separatamente)
exclude = ["frontend"]

# Note: UV risolve automaticamente le dipendenze dai pyproject.toml dei membri
# Le versioni sono unificate tra ai_microservice e backend

# ============================================================================
# DEVELOPMENT TOOLS
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
    "RUF", # ruff-specific rules
]
ignore = [
    "S101",   # Use of assert (OK in tests)
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN"]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["*/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# ============================================================================
# COVERAGE
# ============================================================================
[tool.coverage.run]
source = ["ai_microservice/app", "backend/app"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80

# ============================================================================
# MYPY
# ============================================================================
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Graduale adoption
check_untyped_defs = true
strict_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
