[project]
name = "ironrep-backend"
version = "0.1.0"
description = "IronRep AI Medical Coach Backend"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    # Core Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",

    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",

    # AI & LLM
    "langchain==0.2.16",
    "langchain-core==0.2.38",
    "langchain-community==0.2.16",
    "langchain-groq>=0.1.9,<0.2.0",
    "langchain-google-genai>=1.0.7,<2.0.0",
    "langchain-openai>=0.1.16,<0.2.0",
    "langgraph==0.2.16",
    "ollama>=0.3.0",
    "groq>=0.12.0",
    "google-generativeai>=0.7.0,<0.8.0",

    # Vector Store
    "chromadb>=0.5.23",

    # HTTP & Utilities
    "httpx>=0.28.0",
    "requests>=2.32.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.2",

    # Google APIs (Calendar, YouTube)
    "google-auth>=2.25.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.110.0",
    "google-auth-httplib2>=0.2.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2,bcrypt]>=1.7.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
